syntax = "proto3";

option go_package = ".;metamorph_api";

package metamorph_api;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// Note: Values of the statuses have a difference between them in case
// it's necessary to add another values in between. This will allow to
// create new statuses without changing the values in the existing db.
enum Status {
  UNKNOWN = 0;
  QUEUED = 10;
  RECEIVED = 20;
  STORED = 30;
  ANNOUNCED_TO_NETWORK = 40;
  REQUESTED_BY_NETWORK = 50;
  SENT_TO_NETWORK = 60;
  ACCEPTED_BY_NETWORK = 70;
  SEEN_IN_ORPHAN_MEMPOOL = 80;
  SEEN_ON_NETWORK = 90;
	DOUBLE_SPEND_ATTEMPTED = 100;
  REJECTED = 110;
  MINED = 120;
}

service MetaMorphAPI {
  rpc Health (google.protobuf.Empty) returns (HealthResponse) {}
  rpc PutTransaction (TransactionRequest) returns (TransactionStatus) {}
  rpc PutTransactions (TransactionRequests) returns (TransactionStatuses) {}
  rpc GetTransaction (TransactionStatusRequest) returns (Transaction) {}
  rpc GetTransactions (TransactionsStatusRequest) returns (Transactions) {}
  rpc GetTransactionStatus (TransactionStatusRequest) returns (TransactionStatus) {}
  rpc SetUnlockedByName (SetUnlockedByNameRequest) returns (SetUnlockedByNameResponse) {}
  rpc ClearData (ClearDataRequest) returns (ClearDataResponse) {}
}

// swagger:model HealthResponse
message HealthResponse {
  google.protobuf.Timestamp timestamp = 1;
  int32 mapSize = 2;
  string PeersConnected = 3;
  string PeersDisconnected = 4;
}

// swagger:model TransactionRequest
message TransactionRequest {
  int64 api_key_id = 1;
  int64 standard_fee_id = 2;
  int64 data_fee_id = 3;
  string source_ip = 4;
  string callback_url = 5;
  string callback_token = 6;
  bool merkle_proof = 7 [deprecated = true];
  bytes raw_tx = 8;
  Status wait_for_status = 9;
  bool full_status_updates = 10;
  int64 max_timeout = 11;
}

// swagger:model TransactionRequests
message TransactionRequests {
  repeated TransactionRequest Transactions = 1;
}

// swagger:model Transaction
message Transaction {
  bool timed_out = 1;
  google.protobuf.Timestamp stored_at = 2;
  google.protobuf.Timestamp announced_at = 3;
  google.protobuf.Timestamp mined_at = 4;
  string txid = 5;
  Status status = 6;
  string reject_reason = 7;
	repeated string competingTxs = 8;
  uint64 block_height = 9;
  string block_hash = 10;
  bytes raw_tx = 11;
}

// swagger:model TransactionStatus
message TransactionStatus {
  bool timed_out = 1;
  google.protobuf.Timestamp stored_at = 2;
  google.protobuf.Timestamp announced_at = 3;
  google.protobuf.Timestamp mined_at = 4;
  string txid = 5;
  Status status = 6;
  string reject_reason = 7;
	repeated string competingTxs = 8;
  uint64 block_height = 9;
  string block_hash = 10;
  string merkle_path = 11;
}

// swagger:model TransactionStatuses
message TransactionStatuses {
  repeated TransactionStatus Statuses = 1;
}

// swagger:model TransactionRequest
message TransactionStatusRequest {
  string txid = 1;
}

// swagger:model SetUnlockedByNameRequest
message SetUnlockedByNameRequest {
  string name = 1;
}

// swagger:model SetUnlockedRequest
message SetUnlockedByNameResponse {
  int64 records_affected = 1;
}

// swagger:model ClearDataRequest
message ClearDataRequest {
  int32 retentionDays = 1;
}

// swagger:model ClearDataResponse
message ClearDataResponse {
  int64 records_affected = 1;
}

// swagger:model TransactionsStatusRequest
message TransactionsStatusRequest {
  repeated string txIDs = 1;
}

// swagger:model Transactions
message Transactions {
  repeated Transaction transactions = 1;
}
